--- a/client/src/styles/fonts.scss
+++ b/client/src/styles/fonts.scss
@@ -1,2 +1,3 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap");
 $mainFont: "'Roboto', sans-serif";
 $secondaryFont: "'Poppins', sans-serif";
